1、移除Bukkit API Skill的Paper API特有接口 2、JDK版本从 21 降级到 17，修改相关代码语法 3、文档同步修改